<resources>
    <string name="app_name">SafetyStreets</string>

    <string name="gpsIsNotEnabledTitle">GPS Is Not Enabled</string>
    <string name="gpsIsNotEnabledText">Do you wants to enable?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="cameraPreviewCD">Camera preview</string>

    <string name="failedToLoadAllMapPoints">Markers request failed</string>
    <string name="failedToLoadNearCameras">Near cameras request failed</string>

    <string name="sort">Сортировка</string>
    <string-array name="sortlist">
        <item>первый</item>
        <item>второй</item>
        <item>третий</item>
    </string-array>
    <string name="show">Показать</string>
    <string name="showAll">Все</string>
    <string name="showNotAll">Не все</string>
    <string name="filters">Фильтры:</string>
    <string name="filter0">Фильтр 1</string>
    <string name="filter1">Фильтр 2</string>
    <string name="filter2">Фильтр 3</string>
    <string-array name="filter0list">
        <item>первый</item>
        <item>второй</item>
        <item>третий</item>
    </string-array>
    <string-array name="filter1list">
        <item>первый</item>
        <item>второй</item>
        <item>третий</item>
    </string-array>
    <string-array name="filter2list">
        <item>первый</item>
        <item>второй</item>
        <item>третий</item>
    </string-array>
    <string name="showBtn">Показать</string>
    <string name="switchBtn">Переключатель</string>
    <string name="byDistance">По дистанции</string>
    <string name="nearestCameras">Камеры в радиусе 15 киллометров</string>
    <string name="dangerLevel">Уровень опасности: %.2f</string>
    <string name="cameraName">Имя камеры: %s</string>
    <string name="cameraAddress">Адрес камеры: %s</string>
    <string name="filter">filter</string>
</resources>
