<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sortFilterActivityBackground"
    android:orientation="vertical"
    tools:context=".ui.activity.FilterActivity">

    <TextView
        style="@style/TopicStyle"
        android:text="@string/sort"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/sortSpinner"
        style="@style/SpinnerStyle"
        android:entries="@array/sortlist" />

    <TextView
        style="@style/TopicStyle"
        android:text="@string/show"/>
    
    <RadioGroup
        android:id="@+id/showRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sortFilterActivityBackground"
        android:elevation="5dp"
        android:orientation="vertical">
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showAll"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#9d9b9b"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showNotAll"/>
    </RadioGroup>

    <TextView
        style="@style/TopicStyle"
        android:elevation="6dp"
        android:text="@string/filters" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#9d9b9b"/>

    <TextView
        style="@style/TvForSpinnerStyle"
        android:text="@string/filter0"/>
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/filter0Spinner"
        style="@style/SpinnerStyle"
        android:entries="@array/filter0list"/>

    <TextView
        style="@style/TvForSpinnerStyle"
        android:text="@string/filter1"/>
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/filter1Spinner"
        style="@style/SpinnerStyle"
        android:entries="@array/filter1list"/>

    <TextView
        style="@style/TvForSpinnerStyle"
        android:text="@string/filter2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/filter2Spinner"
            style="@style/SpinnerStyle"
            android:entries="@array/filter2list" />
    </RelativeLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#9d9b9b"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sortFilterActivityBackground"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/switchBtn" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/showBtn"
        android:textColor="@color/sortFilterActivityBackground"
        android:textSize="18sp" />

</LinearLayout>
